client/styles/games.scss
.score {
  margin-left: 2.5rem;
}

.game-inprogress {
  margin-top: 50px;
  h1 {
    font-weight: bold;
    width: 30%;
    margin: 0 auto;
  }
  .scorebutton {
    h3 {
      color: white;
      font-size: 1.4em;
    }
    width: 100%;
    height: 8em;
  }
}

